<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="259dp"
        android:layout_height="248dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/Welcomed_App_Logo"
        app:srcCompat="@drawable/welcomed_logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="249dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="username"
        android:background="@drawable/input_bubble"
        android:fontFamily="@font/dyslexie"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:maxLines="1"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="244dp"
        android:layout_height="69dp"
        android:layout_marginTop="16dp"
        android:autofillHints="password"
        android:maxLines="1"
        android:background="@drawable/input_bubble"
        android:ellipsize="end"
        android:fontFamily="@font/dyslexie"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/dyslexie"
        android:text="@string/forgot_password"
        android:textColor="#FFFFFF"
        android:textSize="13sp"
        android:textStyle="bold"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true" />
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="217dp"
            android:layout_height="60dp"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/dyslexie"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#7B1B9D"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/dyslexie"
                android:text="@string/new_here"
                android:textColor="#6C675E"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/login"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dyslexie"
                android:text="@string/sign_up_now"
                android:textColor="#7B1B9D"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_alignBottom="@id/textView3"
                android:layout_toRightOf="@id/textView3"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>