<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/dyslexie"
            android:text="@string/comment"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/comment_holder"
            app:layout_constraintEnd_toEndOf="@+id/comment_holder"
            app:layout_constraintStart_toStartOf="@+id/comment_holder" />

        <Spinner
            android:id="@+id/contact_spinner"
            android:layout_width="301dp"
            android:layout_height="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/input_purple_outline"
            android:contentDescription="@string/select_your_answer"
            android:textColorHint="#000000"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/add_comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar_maps"
            android:layout_width="match_parent"
            android:layout_height="112dp"

            android:layout_margin="0px"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/report_issue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/dyslexie"
            android:text="@string/report_issue"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.318" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.064" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/report_issue"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/business_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/dyslexie"
                android:text="@string/business"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/business_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:fontFamily="@font/dyslexie"
                android:text="@string/address"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="99dp"
            android:background="#3070D0"
            app:layout_constraintBottom_toBottomOf="@+id/concern_type_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/concern_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dyslexie"
            android:text="@string/concern"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar_maps" />

        <EditText
            android:id="@+id/comment_holder"
            android:layout_width="304dp"
            android:layout_height="104dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/tag_holder"
            android:fontFamily="@font/dyslexie"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="#5C5252"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/preferences_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />


        <Spinner
            android:id="@+id/concern_type_spinner"
            android:layout_width="301dp"
            android:layout_height="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/input_purple_outline"
            android:contentDescription="@string/select_your_concern"
            app:layout_constraintBottom_toTopOf="@+id/name_identifier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/concern_type"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/name_identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/dyslexie"
            android:text="@string/contact"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/contact_spinner"
            app:layout_constraintEnd_toEndOf="@+id/contact_spinner"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/contact_spinner" />

        <TextView
            android:id="@+id/preferences_form"
            android:layout_width="292dp"
            android:layout_height="132dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/text_holder"
            android:fontFamily="@font/dyslexie"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/disclaimer"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:background="@drawable/purple_button"
            android:fontFamily="@font/dyslexie"
            android:text="@string/submit_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>